fix: delete cursor on mobile devices

--- a/frontend/src/components/CustomCursor/CustomCursor.module.scss
+++ b/frontend/src/components/CustomCursor/CustomCursor.module.scss
@@ -2,6 +2,6 @@
 
 .cursor {
   @media (max-width: $tablet-min-width) {
-    visibility: none;
+    display: none;
   }
 }
